Fix gallery gap

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,7 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .gallery__img {
@@ -14,6 +14,7 @@
 @media (min-width: 640px) {
   .gallery {
     grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
   }
 }
 
